--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="message_subscribed">Subscribed to topic</string>
     <string name="connected">Connected</string>
     <string name="disconnect">Disconnect</string>
+    <string name="login_token">Login Token</string>
 
 </resources>
