--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,8 @@
     <string name="connected">Connected</string>
     <string name="disconnect">Disconnect</string>
     <string name="login_token">Login Token</string>
+    <string name="token_login">Token login</string>
+    <string name="off">Off</string>
+    <string name="on">On</string>
 
 </resources>
