implemented the change audio output method.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="token_login">Token login</string>
     <string name="off">Off</string>
     <string name="on">On</string>
+    <string name="audio_settings">Audio Output Device</string>
 
 </resources>
