Implemented call state and removed connection state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="off">Off</string>
     <string name="on">On</string>
     <string name="audio_settings">Audio Output Device</string>
+    <string name="call_state">Call State:</string>
 
 </resources>
