--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,6 @@
     <string name="call_state">Call State:</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="empty_msj_toast"><![CDATA[You must provide User&Password, or TokenID to proceed]]></string>
+    <string name="empty_msg_toast"><![CDATA[You must provide User&Password, or TokenID to proceed]]></string>
 
 </resources>
