--- a/xmlapp/src/main/res/values/strings.xml
+++ b/xmlapp/src/main/res/values/strings.xml
@@ -54,5 +54,7 @@
     <string name="cancel">Cancel</string>
     <string name="username">Username</string>
     <string name="token">Token</string>
+    <string name="sign_in">Sign In</string>
+    <string name="delete">delete</string>
 
 </resources>
