feat: dialpad and hold added to demo apps

--- a/compose_app/src/main/res/values/strings.xml
+++ b/compose_app/src/main/res/values/strings.xml
@@ -61,5 +61,5 @@
     <string name="credential_login">Credential Login</string>
     <string name="confirm">Confirm</string>
     <string name="save">Save</string>
-
+    <string name="dtmf_dialpad">DTMF Dialpad</string>
 </resources>
