feat: push notification permission prompt

--- a/xml_app/src/main/res/values/strings.xml
+++ b/xml_app/src/main/res/values/strings.xml
@@ -61,4 +61,6 @@
     <string name="confirm">Confirm</string>
     <string name="no_profile_selected">No Profile\n</string>
     <string name="dtmf_dialpad">DTMF Dialpad</string>
+
+    <string name="notification_permission_text">Notification permission is required to continue</string>
 </resources>
