--- a/compose_app/src/main/res/values/strings.xml
+++ b/compose_app/src/main/res/values/strings.xml
@@ -63,4 +63,6 @@
     <string name="confirm">Confirm</string>
     <string name="save">Save</string>
     <string name="dtmf_dialpad">DTMF Dialpad</string>
+
+    <string name="notification_permission_text">Notification permission is required to continue</string>
 </resources>
