--- a/compose_app/src/main/res/values/strings.xml
+++ b/compose_app/src/main/res/values/strings.xml
@@ -67,4 +67,11 @@
     <string name="notification_permission_text">Notification permission is required to continue</string>
 
     <string name="empty_profile_fields_message">Please fill all fields</string>
+
+    <string name="environment_options">Environment Options</string>
+    <string name="development_environment">Development Environment</string>
+    <string name="production_environment">Production Environment</string>
+    <string name="copy_fcm_token">Copy FCM Token</string>
+    <string name="disable_push_notifications">Disable Push Notifications</string>
+
 </resources>
