--- a/compose_app/src/main/res/values/strings.xml
+++ b/compose_app/src/main/res/values/strings.xml
@@ -73,5 +73,8 @@
     <string name="production_environment">Production Environment</string>
     <string name="copy_fcm_token">Copy FCM Token</string>
     <string name="disable_push_notifications">Disable Push Notifications</string>
+    <string name="switched_to_production">Switched to Production</string>
+    <string name="switched_to_development">Switched to Development</string>
+    <string name="push_notifications_disabled">Push Notifications Disabled</string>
 
 </resources>
