feat: add record audio permission prompt

--- a/compose_app/src/main/res/values/strings.xml
+++ b/compose_app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="save">Save</string>
     <string name="dtmf_dialpad">DTMF Dialpad</string>
 
-    <string name="notification_permission_text">Notification permission is required to continue</string>
+    <string name="notification_permission_text">Notification and Audio permissions are required to continue</string>
 
     <string name="empty_profile_fields_message">Please fill all fields</string>
 
