--- a/samples/xml_app/src/main/res/values/strings.xml
+++ b/samples/xml_app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="login_info">Please confirm details below and click ‘Connect’ to make a call.</string>
     <string name="home_info">Enter a destination (phone number or SIP user) to initiate your call.</string>
     <string name="profile">Profile</string>
-    <string name="switch_profile">Switch Profile</string>
+    <string name="switch_profile">Switch profile</string>
     <string name="existing_profiles">Existing profiles</string>
     <string name="close_button_dessc">close button</string>
     <string name="add_new_profile">Add new profile</string>
@@ -72,4 +72,6 @@
     <string name="push_notifications_disabled">Push Notifications Disabled</string>
 
     <string name="notification_permission_text">Notification and Audio permissions are required to continue</string>
+
+    <string name="bottom_bar_production_text">Production TelnyxSDK [v1.6.1] - App [v%1$s]</string>
 </resources>
