--- a/samples/compose_app/src/main/res/values/strings.xml
+++ b/samples/compose_app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="call">Call</string>
     <string name="sip_username">SIP Username</string>
     <string name="password">Password</string>
+    <string name="password_hint">Enter password</string>
     <string name="caller_id_name">Caller ID Name</string>
     <string name="caller_id_number">Caller ID Number</string>
     <string name="decline">Decline</string>
@@ -33,7 +34,7 @@
     <string name="connected">Connected</string>
     <string name="disconnect">Disconnect</string>
     <string name="login_token">Login Token</string>
-    <string name="token_login">Token login</string>
+    <string name="token_login">Token Login</string>
     <string name="off">Off</string>
     <string name="on">On</string>
     <string name="audio_settings">Audio Output Device</string>
@@ -56,7 +57,9 @@
     <string name="add_new_profile">Add new profile</string>
     <string name="Cancel">Cancel</string>
     <string name="username">Username</string>
+    <string name="username_hint">Enter username</string>
     <string name="token">Token</string>
+    <string name="token_hint">Enter token</string>
     <string name="sign_in">Sign In</string>
     <string name="delete">Delete</string>
     <string name="credential_login">Credential Login</string>
@@ -77,4 +80,11 @@
     <string name="switched_to_development">Switched to Development</string>
     <string name="push_notifications_disabled">Push Notifications Disabled</string>
     <string name="bottom_bar_production_text">Production TelnyxSDK [v1.6.1] - App [v%1$s]</string>
+
+    <string name="caller_name">Caller name</string>
+    <string name="caller_name_hint">Enter caller name</string>
+    <string name="caller_number">Caller number</string>
+    <string name="caller_number_hint">Enter caller number</string>
+
+    <string name="production_label">production</string>
 </resources>
