--- a/samples/compose_app/src/main/res/values/strings.xml
+++ b/samples/compose_app/src/main/res/values/strings.xml
@@ -90,4 +90,11 @@
     <string name="sip_address_toggle">SIP address</string>
     <string name="phone_number_hint">Enter phone number</string>
     <string name="sip_address_hint">Enter sip address</string>
+
+    <string name="call_state_incoming">New</string>
+    <string name="call_state_active">Active</string>
+    <string name="call_state_ended">Done</string>
+    <string name="call_state_ringing">Ringing</string>
+    <string name="call_state_error">Error</string>
+    <string name="call_state_connecting">Connecting</string>
 </resources>
