--- a/samples/compose_app/src/main/res/values/strings.xml
+++ b/samples/compose_app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="end_and_accept">End and Accept</string>
     <string name="reject_incoming">Reject Incoming</string>
     <string name="hold_and_accept">Hold and Accept</string>
+    <string name="unknown_label">Unknown</string>
 
     <string name="end">End</string>
 
@@ -100,4 +101,16 @@
     <string name="call_state_connecting">Connecting</string>
     <string name="call_state_dropped">Dropped</string>
     <string name="call_state_reconnecting">Reconnecting</string>
+    
+    <string name="call_metrics_label">Call quality</string>
+    <string name="call_metrics_button">View all call metrics</string>
+    <string name="call_quality_metrics_title">Call Quality Metrics</string>
+    <string name="call_quality_metrics_jitter">Jitter:</string>
+    <string name="call_quality_metrics_mos">MOS:</string>
+    <string name="call_quality_metrics_round_trip_time">Round-trip Time:</string>
+    <string name="call_quality_metrics_quality">Quality:</string>
+    <string name="call_quality_metrics_inbound_audio">Inbound Audio</string>
+    <string name="call_quality_metrics_outbound_audio">Outbound Audio</string>
+    <string name="call_quality_metrics_inbound_audio_level">Inbound Level:</string>
+    <string name="call_quality_metrics_outbound_audio_level">Outbound Level:</string>
 </resources>
