--- a/samples/compose_app/src/main/res/values/strings.xml
+++ b/samples/compose_app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="empty_msg_toast"><![CDATA[You must provide User&Password, or TokenID to proceed]]></string>
-    <string name="login_info">Please confirm details below and click ‘Connect’ to make a call.</string>
+    <string name="login_info">Please confirm details below and click \'Connect\' to make a call.</string>
     <string name="home_info">Enter a destination (phone number or SIP user) to initiate your call.</string>
     <string name="profile">Profile</string>
     <string name="missing_profile">No Profile</string>
@@ -113,4 +113,30 @@
     <string name="call_quality_metrics_outbound_audio">Outbound Audio</string>
     <string name="call_quality_metrics_inbound_audio_level">Inbound Level:</string>
     <string name="call_quality_metrics_outbound_audio_level">Outbound Level:</string>
+
+    <!-- Pre-call Diagnosis -->
+    <string name="precall_diagnosis_title">Pre-call Diagnosis</string>
+    <string name="precall_diagnosis_processing">Processing...</string>
+    <string name="precall_diagnosis_completed">Diagnosis completed</string>
+    <string name="precall_diagnosis_failed">Diagnosis failed</string>
+    <string name="precall_diagnosis_network_quality">Network Quality</string>
+    <string name="precall_diagnosis_quality">Quality:</string>
+    <string name="precall_diagnosis_mos">MOS:</string>
+    <string name="precall_diagnosis_jitter">Jitter</string>
+    <string name="precall_diagnosis_jitter_min">min:</string>
+    <string name="precall_diagnosis_jitter_max">max:</string>
+    <string name="precall_diagnosis_jitter_avg">avg:</string>
+    <string name="precall_diagnosis_rtt">RTT</string>
+    <string name="precall_diagnosis_rtt_min">min:</string>
+    <string name="precall_diagnosis_rtt_max">max:</string>
+    <string name="precall_diagnosis_rtt_avg">avg:</string>
+    <string name="precall_diagnosis_session_stats">Session Statistics</string>
+    <string name="precall_diagnosis_bytes_sent">Bytes Sent:</string>
+    <string name="precall_diagnosis_bytes_received">Bytes Received:</string>
+    <string name="precall_diagnosis_packets_sent">Packets Sent:</string>
+    <string name="precall_diagnosis_packets_received">Packets Received:</string>
+    <string name="precall_diagnosis_ice_candidates">ICE Candidates</string>
+    <string name="precall_diagnosis_ice_candidate_label">Candidate:</string>
+    <string name="precall_diagnosis_report_title">Pre-call Diagnosis report</string>
+    <string name="precall_diagnosis_button">Pre-call diagnosis</string>
 </resources>
