--- a/samples/compose_app/src/main/res/values/strings.xml
+++ b/samples/compose_app/src/main/res/values/strings.xml
@@ -113,4 +113,10 @@
     <string name="call_quality_metrics_outbound_audio">Outbound Audio</string>
     <string name="call_quality_metrics_inbound_audio_level">Inbound Level:</string>
     <string name="call_quality_metrics_outbound_audio_level">Outbound Level:</string>
+
+    <!-- Call History Bottom Sheet -->
+    <string name="call_history_title">Call History</string>
+    <string name="call_history_close">Close</string>
+    <string name="call_history_empty">No call history available</string>
+    <string name="call_type">Call type</string>
 </resources>
