--- a/samples/xml_app/src/main/res/values/strings.xml
+++ b/samples/xml_app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="share_wsmessages">Share WsMessages</string>
     <string name="empty_wsmessages">Oops! No logs are available currently. Please check after some time!</string>
     <string name="empty_msg_toast"><![CDATA[You must provide User&Password, or TokenID to proceed]]></string>
-    <string name="login_info">Please confirm details below and click ‘Connect’ to make a call.</string>
+    <string name="login_info">Please confirm details below and click 'Connect' to make a call.</string>
     <string name="home_info">Enter a destination (phone number or SIP user) to initiate your call.</string>
     <string name="profile">Profile</string>
     <string name="switch_profile">Switch profile</string>
@@ -99,4 +99,10 @@
     <string name="call_quality_metrics_inbound_audio_level">Inbound Level:</string>
     <string name="call_quality_metrics_outbound_audio_level">Outbound Level:</string>
     <string name="unknown_label">Unknown</string>
+
+    <!-- Call History Bottom Sheet -->
+    <string name="call_history_title">Call History</string>
+    <string name="call_history_close">Close</string>
+    <string name="call_history_empty">No call history available</string>
+    <string name="call_type">Call type</string>
 </resources>
