feat: debug option moved to HomeScreen menu

--- a/samples/compose_app/src/main/res/values/strings.xml
+++ b/samples/compose_app/src/main/res/values/strings.xml
@@ -148,5 +148,7 @@
 
     <string name="region">Region</string>
     <string name="please_select_profile">Please select a profile</string>
-    <string name="debug_mode">Debug Mode</string>
+
+    <string name="debug_mode_on">Enable Debugging</string>
+    <string name="debug_mode_off">Disable Debugging</string>
 </resources>
