--- a/samples/xml_app/src/main/res/values/strings.xml
+++ b/samples/xml_app/src/main/res/values/strings.xml
@@ -146,5 +146,7 @@
     <string name="call_quality_fair">Fair</string>
     <string name="call_quality_poor">Poor</string>
     <string name="call_quality_bad">Bad</string>
-    <string name="debug_mode">Debug Mode</string>
+
+    <string name="debug_mode_on">Enable Debugging</string>
+    <string name="debug_mode_off">Disable Debugging</string>
 </resources>
