feat: UI of assistant call and login, code refactored

--- a/samples/compose_app/src/main/res/values/strings.xml
+++ b/samples/compose_app/src/main/res/values/strings.xml
@@ -166,5 +166,5 @@
     <string name="assistant_send">Send</string>
     <string name="assistant_you">You</string>
     <string name="assistant_ai">Assistant</string>
-    <string name="assistant_dial">Assistant</string>
+    <string name="assistant_dial">Dial the connected Assistant</string>
 </resources>
