feat: AI agent image support in compose app

--- a/samples/compose_app/src/main/res/values/strings.xml
+++ b/samples/compose_app/src/main/res/values/strings.xml
@@ -166,6 +166,7 @@
     <string name="assistant_send">Send</string>
     <string name="assistant_you">You</string>
     <string name="assistant_ai">Assistant</string>
+    <string name="assistant_add_image">Add image</string>
     <string name="assistant_dial">Dial the connected Assistant</string>
 
     <!-- Codec Selection -->
