--- a/samples/compose_app/src/main/res/values/strings.xml
+++ b/samples/compose_app/src/main/res/values/strings.xml
@@ -175,6 +175,8 @@
 
     <!-- Audio Constraints -->
     <string name="audio_constraints">Audio Constraints</string>
+    <string name="mute_on_start_on">Mute On Start On</string>
+    <string name="mute_on_start_off">Mute On Start Off</string>
     <string name="websocket_messages">Websocket Messages</string>
     <string name="copy_fcm_token_menu">Copy FCM Token</string>
     <string name="disable_push_notifications_menu">Disable Push Notifications</string>
