[WEBRTC-2961]: Android SDK - Ice Trickle Support (#660)
* WEBRTC-2961: Implement Android SDK Ice Trickle Support

- Add useTrickleIce parameter to TelnyxConfig (CredentialConfig and TokenConfig) with default false
- Create new SocketMethods for telnyx_rtc.candidate and telnyx_rtc.endOfCandidates
- Modify signaling process in Peer.kt to support trickle ICE:
  * Send ICE candidates via signaling when trickle ICE enabled
  * Add candidates locally when trickle ICE disabled
  * Send end-of-candidates signal when ICE gathering completes
- Update TelnyxClient.kt with trickle ICE configuration and message handling
- Add CandidateParams and EndOfCandidatesParams classes for ICE candidate signaling
- Update TxSocket.kt to handle CANDIDATE and END_OF_CANDIDATES socket methods
- Add onCandidateReceived() and onEndOfCandidatesReceived() methods to TxSocketListener
- Update telnyx_common module Profile model and utility functions
- Add trickle ICE checkbox to both sample apps (compose_app and xml_app)
- Enable users to toggle trickle ICE on/off during login configuration

This implementation allows faster call establishment when trickle ICE is enabled
by sending ICE candidates as they are discovered rather than waiting for all
candidates to be gathered before starting the signaling process.

* Complete trickle ICE implementation

- Remove useTrickleIce from TelnyxConfig (CredentialConfig and TokenConfig)
- Add useTrickleIce parameter to newInvite() and acceptCall() methods with default false
- Update all domain classes to support useTrickleIce parameter:
  - SendInvite.kt and AcceptCall.kt
  - EndCurrentAndAcceptIncoming.kt and HoldCurrentAndAcceptIncoming.kt
  - AnswerIncomingPushCall.kt (both invoke and invokeFlow methods)
- Add useTrickleIce state variable to TelnyxViewModel
- Update all ViewModel calls to pass useTrickleIce parameter
- Add trickle ICE toggle to compose_app overflow menu with dynamic text
- Add trickle ICE toggle to xml_app overflow menu with toggleTrickleIce

--- a/samples/xml_app/src/main/res/values/strings.xml
+++ b/samples/xml_app/src/main/res/values/strings.xml
@@ -154,6 +154,10 @@
     <string name="enable_prefetch_ice_candidates">Enable Prefetch Ice Candidates</string>
     <string name="disable_prefetch_ice_candidates">Disable Prefetch Ice Candidates</string>
     
+    <!-- Trickle ICE -->
+    <string name="enable_trickle_ice">Enable Trickle ICE</string>
+    <string name="disable_trickle_ice">Disable Trickle ICE</string>
+    
     <!-- Assistant Login -->
     <string name="assistant_login">Assistant Login</string>
     <string name="assistant_login_dialog_title">Assistant Login</string>
@@ -187,6 +191,7 @@
     <string name="select_reorder_codecs">Select and reorder your preferred codecs. Drag to reorder by priority.</string>
     <string name="available_codecs">Available Codecs:</string>
     <string name="selected_codecs_order">Selected Codecs (in order of preference):</string>
+    <string name="region">Region</string>
 
     <!-- Audio Constraints -->
     <string name="audio_constraints">Audio Constraints</string>
@@ -225,6 +230,5 @@
     <string name="connection_metrics_percent">%.1f%%</string>
     <string name="no_connection_metrics">No connection metrics available</string>
     <string name="close">Close</string>
-
     <string name="loading_codecs">Loading available codecs…</string>
 </resources>
